Fix Search Result Overlap

--- a/static/css/components/header-bar.less
+++ b/static/css/components/header-bar.less
@@ -225,7 +225,7 @@
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
-    z-index: @z-index-level-1;
+    z-index: @z-index-level-4;
 
     // stylelint-disable selector-max-specificity
     // stylelint-disable max-nesting-depth
